# Chores

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  PROMPT.md  README.md  package-lock.json  package.json
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260223_0001_auth_user_role_constraint.py  20260518_0002_family_modules.py  20260518_0003_homeschool_core.py  20260518_0004_homeschool_notes_grades.py  20260518_0005_global_user_email.py  20260530_0007_recipes.py  (+11 more)
backend/app/: config.py  db.py  error_handling.py  health.py  logging_config.py  main.py  modules.py  startup.py
backend/scripts/: bootstrap_platform_user.py  process_push_deliveries.py  run_notification_scheduler.py  seed_chore_mgmt_smoke.py  seed_playwright_smoke.py  smoke_safety.py
backend/tests/: conftest.py  test_alembic_migrations.py  test_auth_api.py  test_auth_dependencies.py  test_billing_adapters.py  test_children_api.py  test_config.py  test_db.py  test_deployment_routing.py  test_error_handling.py  test_happy_path_e2e.py  test_health_api.py  test_homeschool_api.py  test_household_modules_api.py  test_models.py  test_module_contract.py  test_module_manage_permissions.py  test_modules_api.py  test_notification_hardening.py  test_notifications_api.py  test_permissions_api.py  test_phase9_foundation.py  test_phase9_review_blockers.py  test_recipe_importer_security.py  test_recipe_scaling.py  test_recipe_schema_limits.py  test_recipes_api.py  test_schedule_matrix.py  test_security_hardening.py  test_smoke_safety.py  test_startup.py
(+234 files in other folders)
