[project]
name = "chore-tracking-backend"
version = "0.1.0"
description = "FastAPI backend for Chore Tracker v3"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "pydantic>=2.10.0",
  "argon2-cffi>=23.1.0",
  "itsdangerous>=2.2.0",
  "python-multipart>=0.0.12"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0"
]
